Changed loadDefaults to handle relative URIs in RNC pseudo attributes.